# ai-determinism-bench

./: .gitignore  README.md  SPEC.md  pyproject.toml
benchmark/: __init__.py  __main__.py  cli.py  config.py
benchmark/backends/: __init__.py  base.py  cpu.py  cuda.py  mlx.py
benchmark/determinism/: __init__.py  modes.py  verify.py
benchmark/metrics/: __init__.py  numerical.py  timing.py
benchmark/models/: __init__.py  _mlx_resnet.py  _mlx_vit.py  llm.py  vision.py
benchmark/report/: __init__.py  aggregator.py  formatter.py
benchmark/runners/: __init__.py  base_runner.py  llm_runner.py  vision_runner.py
